Initial implementations of jpeg and png image load store routines Resize implementation (nearest neighbour and bilinear)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-#ENABLE_TESTING()
+ENABLE_TESTING()
 
 FIND_PACKAGE(JPEG)
 IF (JPEG_FOUND)
@@ -58,4 +58,4 @@ ENDIF (UNIX OR APPLE)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imageconfig.h.in ${CMAKE_BINARY_DIR}/imageconfig.h)
 
-#ADD_SUBDIRECTORY(test)
+ADD_SUBDIRECTORY(test)
