--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ SET (IMAGE_LIBRARY_DIRS
 SET (IMAGE_LIBRARIES image
     ${JPEG_LIBRARIES}
     ${PNG_LIBRARIES}
+    ${UTILS_LIBRARIES}
 )
 
 SET (IMAGE_SRC_LIST
