--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,11 +5,11 @@ GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DI
 
 INCLUDE_DIRECTORIES(
     ${UTILS_INCLUDE_DIRS}
+    ${IMAGE_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 LINK_DIRECTORIES(
-    ${UTILS_LIBRARY_DIRS}
     ${IMAGE_LIBRARY_DIRS}
 )
 
@@ -20,7 +20,6 @@ ADD_EXECUTABLE(imagetest EXCLUDE_FROM_ALL
 )
 
 TARGET_LINK_LIBRARIES(imagetest
-    ${UTILS_LIBRARIES}
     ${IMAGE_LIBRARIES}
 )
 
