--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,5 +26,9 @@ TARGET_LINK_LIBRARIES(imagetest
 SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagetestconfig.h.in ${CMAKE_BINARY_DIR}/imagetestconfig.h)
 
+IF (STANDALONE)
+	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
+ENDIF (STANDALONE)
+
 ADD_TEST(ImageTests imagetest) 
 ADD_DEPENDENCIES(check imagetest)
