--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
+IF (STANDALONE)
+	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils)
+	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
+ENDIF (STANDALONE)
+
 GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
 GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_LIBRARIES)
 
@@ -25,10 +30,6 @@ TARGET_LINK_LIBRARIES(imagetest
 
 SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagetestconfig.h.in ${CMAKE_BINARY_DIR}/imagetestconfig.h)
-
-IF (STANDALONE)
-	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
-ENDIF (STANDALONE)
 
 ADD_TEST(ImageTests imagetest) 
 ADD_DEPENDENCIES(check imagetest)
