--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 IF (STANDALONE)
-	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils)
+	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils "${CMAKE_CURRENT_BINARY_DIR}/utils")
 	ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND})
 ENDIF (STANDALONE)
 
