--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,7 @@ ADD_EXECUTABLE(imagetest EXCLUDE_FROM_ALL
 
 TARGET_LINK_LIBRARIES(imagetest
     ${IMAGE_LIBRARIES}
+    ${UTILS_LIBRARIES}
 )
 
 SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
