--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ LINK_DIRECTORIES(${IMAGE_LIBRARY_DIRS})
 
 ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
 
-ADD_DEFINITIONS("-std=c++11")
+ADD_DEFINITIONS("-std=c++1y")
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     SET(CMAKE_CXX_FLAGS "-stdlib=libc++")
 ENDIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
