--- a/wercker.yml
+++ b/wercker.yml
@@ -12,6 +12,7 @@ build:
 
         - script:
             name: Install dependencies
+            code: |
                 sudo apt-get-install libxdg-basedir-dev libpng-dev ligjpeg-dev
 
         - script:
