--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,7 @@ build:
         - script:
             name: Install dependencies
             code: |
-                sudo apt-get install libxdg-basedir-dev libpng-dev ligjpeg-dev
+                sudo apt-get install libxdg-basedir-dev libpng-dev libjpeg-dev
 
         - script:
             name: Compile Image
