--- a/wercker.yml
+++ b/wercker.yml
@@ -13,7 +13,8 @@ build:
         - script:
             name: Install dependencies
             code: |
-                apt-cache search jpeg
+                sudo apt-cache search jpeg
+                sudo apt-cache search libpng
                 sudo apt-get install libxdg-basedir-dev libpng-dev libjpeg-turbo-dev
 
         - script:
