--- a/wercker.yml
+++ b/wercker.yml
@@ -27,6 +27,7 @@ build:
             code: |
                 mkdir -p "${BUILD_DIR}"
                 cd "${SRC_DIR}"
+                mkdir -p ../utils
                 cd ../utils
                 git clone https://github.com/dirkvdb/utils.git
                 git submodule update --init
