--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,17 +16,11 @@ ENDIF (PNG_FOUND)
 SET (IMAGE_INCLUDE_DIRS
     "${CMAKE_CURRENT_SOURCE_DIR}/inc/"
     "${CMAKE_CURRENT_SOURCE_DIR}/../utils/inc/"
-    ${JPEG_INCLUDE_DIR}
-    ${PNG_INCLUDE_DIRS}
 )
 SET (IMAGE_LIBRARY_DIRS
     "${CMAKE_CURRENT_BINARY_DIR}"
-    ${JPEG_LIBRARY_DIRS}
-    ${PNG_LIBRARY_DIRS}
 )
 SET (IMAGE_LIBRARIES image
-    ${JPEG_LIBRARIES}
-    ${PNG_LIBRARIES}
     ${UTILS_LIBRARIES}
 )
 
@@ -38,10 +32,16 @@ SET (IMAGE_SRC_LIST
 
 IF (HAVE_JPEG)
     LIST(APPEND IMAGE_SRC_LIST src/imageloadstorejpeg.h src/imageloadstorejpeg.cpp)
+    LIST(APPEND IMAGE_INCLUDE_DIRS ${JPEG_INCLUDE_DIR})
+    LIST(APPEND IMAGE_LIBRARY_DIRS ${JPEG_LIBRARY_DIRS})
+    LIST(APPEND IMAGE_LIBRARIES ${JPEG_LIBRARIES})
 ENDIF (HAVE_JPEG)
 
 IF (HAVE_PNG)
     LIST(APPEND IMAGE_SRC_LIST src/imageloadstorepng.h src/imageloadstorepng.cpp)
+    LIST(APPEND IMAGE_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
+    LIST(APPEND IMAGE_LIBRARY_DIRS ${PNG_LIBRARY_DIRS})
+    LIST(APPEND IMAGE_LIBRARIES ${PNG_LIBRARIES})
 ENDIF (HAVE_PNG)
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
