--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,12 @@ OPTION(STANDALONE "Not used as a submodule of another project" OFF)
 FIND_PACKAGE(JPEG)
 IF (JPEG_FOUND)
     OPTION(HAVE_JPEG "Jpeg support" ON)
-ENDIF (JPEG_FOUND)
+ENDIF ()
 
 FIND_PACKAGE(PNG)
 IF (PNG_FOUND)
     OPTION(HAVE_PNG "Png support" ON)
-ENDIF (PNG_FOUND)
+ENDIF ()
 
 SET (IMAGE_INCLUDE_DIRS
     "${CMAKE_CURRENT_SOURCE_DIR}/inc/"
@@ -35,14 +35,14 @@ IF (HAVE_JPEG)
     LIST(APPEND IMAGE_INCLUDE_DIRS ${JPEG_INCLUDE_DIR})
     LIST(APPEND IMAGE_LIBRARY_DIRS ${JPEG_LIBRARY_DIRS})
     LIST(APPEND IMAGE_LIBRARIES ${JPEG_LIBRARIES})
-ENDIF (HAVE_JPEG)
+ENDIF ()
 
 IF (HAVE_PNG)
     LIST(APPEND IMAGE_SRC_LIST src/imageloadstorepng.h src/imageloadstorepng.cpp)
     LIST(APPEND IMAGE_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
     LIST(APPEND IMAGE_LIBRARY_DIRS ${PNG_LIBRARY_DIRS})
     LIST(APPEND IMAGE_LIBRARIES ${PNG_LIBRARIES})
-ENDIF (HAVE_PNG)
+ENDIF ()
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
 LINK_DIRECTORIES(${IMAGE_LIBRARY_DIRS})
@@ -52,11 +52,11 @@ ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
 ADD_DEFINITIONS("-std=c++1y")
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     SET(CMAKE_CXX_FLAGS "-stdlib=libc++")
-ENDIF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+ENDIF ()
 
 IF (UNIX OR APPLE)
     ADD_DEFINITIONS("-DCONSOLE_SUPPORTS_COLOR")
-ENDIF (UNIX OR APPLE)
+ENDIF ()
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imageconfig.h.in ${CMAKE_BINARY_DIR}/imageconfig.h)
 
