Use transitive linking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ SET (IMAGE_INCLUDE_DIRS
 SET (IMAGE_LIBRARY_DIRS
     "${CMAKE_CURRENT_BINARY_DIR}"
 )
-SET (IMAGE_LIBRARIES image
-    ${UTILS_LIBRARIES}
+SET (IMAGE_LIBRARIES
+    utils
 )
 
 SET (IMAGE_SRC_LIST
@@ -45,9 +45,8 @@ IF (HAVE_PNG)
 ENDIF ()
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
-LINK_DIRECTORIES(${IMAGE_LIBRARY_DIRS})
-
 ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
+TARGET_LINK_LIBRARIES(image ${IMAGE_LIBRARIES})
 
 ADD_DEFINITIONS("-std=c++1y")
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
