--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,6 @@ IF (STANDALONE)
 ENDIF (STANDALONE)
 
 GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
-GET_DIRECTORY_PROPERTY(UTILS_LIBRARIES      DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_LIBRARIES)
 
 INCLUDE_DIRECTORIES(
     ${UTILS_INCLUDE_DIRS}
@@ -24,12 +23,12 @@ ADD_EXECUTABLE(imagetest EXCLUDE_FROM_ALL
 )
 
 TARGET_LINK_LIBRARIES(imagetest
-    ${IMAGE_LIBRARIES}
-    ${UTILS_LIBRARIES}
+    image
+    utils
 )
 
 SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imagetestconfig.h.in ${CMAKE_BINARY_DIR}/imagetestconfig.h)
 
-ADD_TEST(NAME ImageTests COMMAND imagetest) 
+ADD_TEST(NAME ImageTests COMMAND imagetest)
 ADD_DEPENDENCIES(check imagetest)
