--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,7 +4,7 @@ IF (STANDALONE)
 	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../../utils "${CMAKE_CURRENT_BINARY_DIR}/utils")
 ENDIF (STANDALONE)
 
-GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION UTILS_INCLUDE_DIRS)
+GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION INCLUDE_DIRS)
 
 INCLUDE_DIRECTORIES(
     ${UTILS_INCLUDE_DIRS}
@@ -24,7 +24,6 @@ ADD_EXECUTABLE(imagetest EXCLUDE_FROM_ALL
 
 TARGET_LINK_LIBRARIES(imagetest
     image
-    utils
 )
 
 SET(IMAGE_TEST_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
