--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ ENDIF ()
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
 ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
-TARGET_LINK_LIBRARIES(image ${IMAGE_LIBRARIES})
+TARGET_LINK_LIBRARIES(image utils ${IMAGE_LIBRARIES})
 
 ADD_DEFINITIONS("-std=c++1y")
 IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
