--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,13 +48,11 @@ INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
 ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
 TARGET_LINK_LIBRARIES(image utils ${IMAGE_LIBRARIES})
 
-ADD_DEFINITIONS("-std=c++1y")
-IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-ENDIF ()
-
-IF (UNIX OR APPLE)
-    ADD_DEFINITIONS("-DCONSOLE_SUPPORTS_COLOR")
+IF (STANDALONE)
+    ADD_DEFINITIONS("-std=c++1y")
+    IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND APPLE)
+        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    ENDIF ()
 ENDIF ()
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imageconfig.h.in ${CMAKE_BINARY_DIR}/imageconfig.h)
