--- a/.travis.yml
+++ b/.travis.yml
@@ -19,18 +19,12 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -qq install build-essential libxdg-basedir-dev libflac++-dev libmad0-dev libpulse-dev libopenal-dev libasound2-dev
+  - sudo apt-get -qq install build-essential libjpeg-dev libpng-dev
   - if [ "$CXX" = "g++" ]; then sudo apt-get -qq --allow-unauthenticated install gcc-4.9 g++-4.9; export CXX="g++-4.9" CC="gcc-4.9"; fi
   - if [ "$CXX" = "clang++" ]; then sudo apt-get -qq --allow-unauthenticated install clang-3.6; export CXX="clang++-3.6" CC="clang-3.6"; fi
-  - wget http://taglib.github.io/releases/taglib-1.9.1.tar.gz
-  - tar xf taglib-1.9.1.tar.gz
-  - cd taglib-1.9.1
-  - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DCMAKE_INSTALL_PREFIX:PATH=/usr .
-  - sudo make -j4 install
-  - cd ..
-  - wget http://www.ffmpeg.org/releases/ffmpeg-2.6.2.tar.bz2
-  - tar xf ffmpeg-2.6.2.tar.bz2
-  - cd ffmpeg-2.6.2 && ./configure --prefix=/usr --disable-shared --disable-avdevice --disable-doc --disable-htmlpages --disable-manpages --disable-programs --disable-encoders --disable-muxers --disable-decoders --disable-swscale --disable-yasm --disable-everything && make && sudo make install
+  - wget ftp://ftp.simplesystems.org/pub/png//src/libpng15/libpng-1.5.22.tar.gz
+  - tar xf libpng-1.5.22.tar.gz
+  - cd libpng-1.5.22 && ./configure --prefix=/usr --disable-dependency-tracking && make && sudo make install
   - cd ..
 
 before_script:
