--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - sudo apt-get -qq install build-essential libjpeg-dev
   - if [ "$CXX" = "g++" ]; then sudo apt-get -qq --allow-unauthenticated install gcc-4.9 g++-4.9; export CXX="g++-4.9" CC="gcc-4.9"; fi
   - if [ "$CXX" = "clang++" ]; then sudo apt-get -qq --allow-unauthenticated install clang-3.6; export CXX="clang++-3.6" CC="clang-3.6"; fi
-  - sudo rm -f /usr/lib64/libpng*
+  - sudo rm -f /usr/lib/x86_64-linux-gnu/libpng*
   - wget ftp://ftp.simplesystems.org/pub/png//src/libpng16/libpng-1.6.17.tar.gz
   - tar xf libpng-1.6.17.tar.gz
   - cd libpng-1.6.17 && ./configure --prefix=/usr --disable-dependency-tracking && make && sudo make install
