Changed method to enable tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 ENABLE_TESTING()
 
 OPTION(STANDALONE "Not used as a submodule of another project" OFF)
+OPTION(ENABLE_TESTS "build unit tests" ON)
 
 FIND_PACKAGE(JPEG)
 IF (JPEG_FOUND)
@@ -57,4 +58,6 @@ ENDIF ()
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/imageconfig.h.in ${CMAKE_BINARY_DIR}/imageconfig.h)
 
-ADD_SUBDIRECTORY(test)
+IF (ENABLE_TESTS)
+    ADD_SUBDIRECTORY(test)
+ENDIF ()
