--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,8 +51,15 @@ TARGET_LINK_LIBRARIES(image utils ${IMAGE_LIBRARIES})
 
 IF (STANDALONE)
     ADD_DEFINITIONS("-std=c++1y")
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Weffc++")
+    SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O1")
+    ADD_DEFINITIONS("-std=c++1y")
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND APPLE)
         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    ENDIF ()
+
+    IF (CMAKE_COMPILER_IS_GNUCXX)
+        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -rdynamic")
     ENDIF ()
 ENDIF ()
 
