--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,10 +4,13 @@ ENDIF (STANDALONE)
 
 GET_DIRECTORY_PROPERTY(UTILS_INCLUDE_DIRS	DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../utils" DEFINITION INCLUDE_DIRS)
 
+INCLUDE_DIRECTORIES(SYSTEM
+    ${CMAKE_CURRENT_SOURCE_DIR}/gmock
+)
+
 INCLUDE_DIRECTORIES(
     ${UTILS_INCLUDE_DIRS}
     ${IMAGE_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 LINK_DIRECTORIES(
