--- a/wercker.yml
+++ b/wercker.yml
@@ -5,22 +5,10 @@ build:
         - script:
             name: Setup environnement variables
             code: |
-                SRC_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+                SRC_DIR="$(pwd)"
                 BUILD_DIR="${SRC_DIR}/build"
                 echo "SRC_DIR ${SRC_DIR}"
                 echo "BUILD_DIR ${BUILD_DIR}"
-
-        - script:
-            name: Install dependencies
-            code: |
-                sudo apt-get update
-                sudo apt-get install libxdg-basedir-dev libjpeg-dev zlib1g-dev
-                wget ftp://ftp.simplesystems.org/pub/png//src/libpng15/libpng-1.5.22.tar.gz
-                tar xf libpng-1.5.22.tar.gz
-                cd libpng-1.5.22
-                ./configure --disable-static
-                make
-                sudo make install
 
         - script:
             name: Compile Image
