--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ SET (IMAGE_INCLUDE_DIRS
     "${CMAKE_CURRENT_SOURCE_DIR}/inc/"
     "${CMAKE_CURRENT_SOURCE_DIR}/../utils/inc/"
 )
+SET (IMAGE_SYS_INCLUDE_DIRS)
 SET (IMAGE_LIBRARY_DIRS
     "${CMAKE_CURRENT_BINARY_DIR}"
 )
@@ -33,19 +34,20 @@ SET (IMAGE_SRC_LIST
 
 IF (HAVE_JPEG)
     LIST(APPEND IMAGE_SRC_LIST src/imageloadstorejpeg.h src/imageloadstorejpeg.cpp)
-    LIST(APPEND IMAGE_INCLUDE_DIRS ${JPEG_INCLUDE_DIR})
+    LIST(APPEND IMAGE_SYS_INCLUDE_DIRS ${JPEG_INCLUDE_DIR})
     LIST(APPEND IMAGE_LIBRARY_DIRS ${JPEG_LIBRARY_DIRS})
     LIST(APPEND IMAGE_LIBRARIES ${JPEG_LIBRARIES})
 ENDIF ()
 
 IF (HAVE_PNG)
     LIST(APPEND IMAGE_SRC_LIST src/imageloadstorepng.h src/imageloadstorepng.cpp)
-    LIST(APPEND IMAGE_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
+    LIST(APPEND IMAGE_SYS_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
     LIST(APPEND IMAGE_LIBRARY_DIRS ${PNG_LIBRARY_DIRS})
     LIST(APPEND IMAGE_LIBRARIES ${PNG_LIBRARIES})
 ENDIF ()
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${IMAGE_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(SYSTEM ${IMAGE_SYS_INCLUDE_DIRS})
 ADD_LIBRARY(image STATIC ${IMAGE_SRC_LIST})
 TARGET_LINK_LIBRARIES(image utils ${IMAGE_LIBRARIES})
 
