--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,139 @@
+sudo: required
+dist: trusty
 language: cpp
 
-os:
-  - linux
-
-compiler:
-  - gcc
-  - clang
-
-env:
-  - BUILD_TYPE=Debug
-  - BUILD_TYPE=Release
+matrix:
+  include:
+    - compiler: clang
+      addons:
+        apt:
+          packages:
+            - libjpeg-dev
+      env:
+        - COMPILER=3.7 LLVM_VERSION=3.7.1 BUILD_TYPE=Debug
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - libjpeg-dev
+      env:
+        - COMPILER=3.7 LLVM_VERSION=3.7.1 BUILD_TYPE=Release
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - libjpeg-dev
+      env:
+        - COMPILER=3.8 LLVM_VERSION=3.8.0 BUILD_TYPE=Debug
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - libjpeg-dev
+      env:
+        - COMPILER=3.8 LLVM_VERSION=3.8.0 BUILD_TYPE=Release
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+            - libjpeg-dev
+      env:
+        - COMPILER=5 BUILD_TYPE=Debug
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+            - libjpeg-dev
+      env:
+        - COMPILER=5 BUILD_TYPE=Release
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+            - libjpeg-dev
+      env:
+        - COMPILER=6 BUILD_TYPE=Debug
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+            - libjpeg-dev
+      env:
+        - COMPILER=6 BUILD_TYPE=Release
+    - compiler: clang
+      os: osx
+      env:
+        - BUILD_TYPE=Debug
+      osx_image: xcode7.3
+    - compiler: clang
+      os: osx
+      env:
+        - BUILD_TYPE=Release
+      osx_image: xcode7.3
 
 before_install:
-  - echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise main" | sudo tee -a /etc/apt/sources.list
-  - echo "deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6 main" | sudo tee -a /etc/apt/sources.list
-  - echo "deb http://ppa.launchpad.net/ubuntu-toolchain-r/test/ubuntu precise main" | sudo tee -a /etc/apt/sources.list
-  - sudo apt-get update -qq
+  ############################################################################
+  # All the dependencies are installed in ${TRAVIS_BUILD_DIR}/deps/
+  ############################################################################
+  - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+  - mkdir -p ${DEPS_DIR}/local
+  - cd ${DEPS_DIR}
+  - export CXXFLAGS="-isystem ${DEPS_DIR}/local/include"
+  - export PKG_CONFIG_PATH=${DEPS_DIR}/local/lib/pkgconfig
+  - export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${DEPS_DIR}/local/lib"
+  - export LDFLAGS="-L${DEPS_DIR}/local/lib"
+
+  ############################################################################
+  # Install a recent CMake
+  ############################################################################
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
+      CMAKE_URL="http://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.tar.gz"
+      mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
+    fi
+
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
+      brew install libpng libjpeg
+    fi
+
+  ############################################################################
+  # Install clang on linux
+  ############################################################################
+  - |
+    if [[ "${TRAVIS_OS_NAME}" == "linux" && "${CXX}" == "clang++" ]]; then
+      travis_retry wget --quiet -O - http://llvm.org/releases/${LLVM_VERSION}/clang+llvm-${LLVM_VERSION}-x86_64-linux-gnu-ubuntu-14.04.tar.xz | tar --strip-components=1 ${TAR_FLAGS} -xJ -C ${DEPS_DIR}/local
+      export PATH=${DEPS_DIR}/local/bin:${PATH}
+      export LDFLAGS="${LDFLAGS} -lc++ -lc++abi -lm"
+      export CXXFLAGS="${CXXFLAGS} -isystem ${DEPS_DIR}/local/include/c++/v1 -stdlib=libc++"
+      export CXX="clang-${COMPILER}" CC="clang-${COMPILER}"
+      ${CXX} -v
+    fi
+
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-${COMPILER}" CC="gcc-${COMPILER}"; fi
 
 install:
-  - sudo apt-get -qq install build-essential libjpeg-dev
-  - if [ "$CXX" = "g++" ]; then sudo apt-get -qq --allow-unauthenticated install gcc-4.9 g++-4.9; export CXX="g++-4.9" CC="gcc-4.9"; fi
-  - if [ "$CXX" = "clang++" ]; then sudo apt-get -qq --allow-unauthenticated install clang-3.6; export CXX="clang++-3.6" CC="clang-3.6"; fi
   - sudo rm -f /usr/lib/x86_64-linux-gnu/libpng*
-  -  wget ftp://ftp.simplesystems.org/pub/libpng/png/src/libpng16/libpng-1.6.26.tar.gz
+  - wget ftp://ftp.simplesystems.org/pub/libpng/png/src/libpng16/libpng-1.6.26.tar.gz
   - tar xf libpng-1.6.26.tar.gz
   - cd libpng-1.6.26 && ./configure --prefix=/usr --disable-dependency-tracking && make && sudo make install
   - cd ..
@@ -35,6 +146,3 @@ script:
   - cmake -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DSTANDALONE=ON .
   - make -j4
   - CTEST_OUTPUT_ON_FAILURE=1 make test
-
-after_failure:
-  - cat Testing/Temporary/LastTest.log
