Updated travis file

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,8 @@ include_directories(SYSTEM
     ${CMAKE_CURRENT_SOURCE_DIR}/gmock
 )
 
+include_directories(${CMAKE_BINARY_DIR})
+
 add_executable(imagetest
     gmock-gtest-all.cpp
     main.cpp
