--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 dist: trusty
 language: cpp
 
@@ -10,7 +9,7 @@ matrix:
           packages:
             - libjpeg-dev
       env:
-        - COMPILER=3.7 LLVM_VERSION=3.7.1 BUILD_TYPE=Debug
+        - COMPILER=4.0 LLVM_VERSION=4.0.0 BUILD_TYPE=Debug
     - compiler: clang
       addons:
         apt:
@@ -19,7 +18,7 @@ matrix:
           packages:
             - libjpeg-dev
       env:
-        - COMPILER=3.7 LLVM_VERSION=3.7.1 BUILD_TYPE=Release
+        - COMPILER=4.0 LLVM_VERSION=4.0.0 BUILD_TYPE=Release
     - compiler: clang
       addons:
         apt:
@@ -28,7 +27,7 @@ matrix:
           packages:
             - libjpeg-dev
       env:
-        - COMPILER=3.8 LLVM_VERSION=3.8.0 BUILD_TYPE=Debug
+        - COMPILER=5.0 LLVM_VERSION=5.0.1 BUILD_TYPE=Debug
     - compiler: clang
       addons:
         apt:
@@ -37,57 +36,39 @@ matrix:
           packages:
             - libjpeg-dev
       env:
-        - COMPILER=3.8 LLVM_VERSION=3.8.0 BUILD_TYPE=Release
+        - COMPILER=5.0 LLVM_VERSION=5.0.1 BUILD_TYPE=Release
     - compiler: gcc
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-5
-            - libjpeg-dev
+            - g++-7
+            - libxdg-basedir-dev
+            - lcov
       env:
-        - COMPILER=5 BUILD_TYPE=Debug
+        - COMPILER=7 BUILD_TYPE=Debug
     - compiler: gcc
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-5
-            - libjpeg-dev
+            - g++-7
+            - libxdg-basedir-dev
+            - lcov
       env:
-        - COMPILER=5 BUILD_TYPE=Release
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - libjpeg-dev
-      env:
-        - COMPILER=6 BUILD_TYPE=Debug
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-6
-            - libjpeg-dev
-      env:
-        - COMPILER=6 BUILD_TYPE=Release
+        - COMPILER=7 BUILD_TYPE=Release
     - compiler: clang
       os: osx
       env:
         - BUILD_TYPE=Debug
-      osx_image: xcode7.3
+      osx_image: xcode9
     - compiler: clang
       os: osx
       env:
         - BUILD_TYPE=Release
-      osx_image: xcode7.3
+      osx_image: xcode9
 
 before_install:
   ############################################################################
@@ -106,7 +87,7 @@ before_install:
   ############################################################################
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" ]]; then
-      CMAKE_URL="http://cmake.org/files/v3.1/cmake-3.1.3-Linux-x86_64.tar.gz"
+      CMAKE_URL="http://cmake.org/files/v3.10/cmake-3.10.1-Linux-x86_64.tar.gz"
       mkdir cmake && travis_retry wget --no-check-certificate --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake
       export PATH=${DEPS_DIR}/cmake/bin:${PATH}
     fi
@@ -116,7 +97,12 @@ before_install:
   ############################################################################
   - |
     if [[ "${TRAVIS_OS_NAME}" == "linux" && "${CXX}" == "clang++" ]]; then
-      travis_retry wget --quiet -O - http://llvm.org/releases/${LLVM_VERSION}/clang+llvm-${LLVM_VERSION}-x86_64-linux-gnu-ubuntu-14.04.tar.xz | tar --strip-components=1 ${TAR_FLAGS} -xJ -C ${DEPS_DIR}/local
+      if [[ "$COMPILER" == "4.0" ]]; then
+        travis_retry wget --quiet -O - http://llvm.org/releases/${LLVM_VERSION}/clang+llvm-${LLVM_VERSION}-x86_64-linux-gnu-ubuntu-14.04.tar.xz | tar --strip-components=1 ${TAR_FLAGS} -xJ -C ${DEPS_DIR}/local
+      else
+        travis_retry wget --quiet -O - http://releases.llvm.org/${LLVM_VERSION}/clang+llvm-${LLVM_VERSION}-x86_64-linux-gnu-ubuntu-14.04.tar.xz | tar --strip-components=1 ${TAR_FLAGS} -xJ -C ${DEPS_DIR}/local
+      fi
+
       export PATH=${DEPS_DIR}/local/bin:${PATH}
       export LDFLAGS="${LDFLAGS} -lc++ -lc++abi -lm"
       export CXXFLAGS="${CXXFLAGS} -isystem ${DEPS_DIR}/local/include/c++/v1 -stdlib=libc++"
@@ -128,9 +114,14 @@ before_install:
 
 install:
   - sudo rm -f /usr/lib/x86_64-linux-gnu/libpng*
-  - wget ftp://ftp.simplesystems.org/pub/libpng/png/src/libpng16/libpng-1.6.26.tar.xz
-  - tar xf libpng-1.6.26.tar.xz
-  - cd libpng-1.6.26 && cmake -DPNG_SHARED=OFF -DPNG_TESTS=OFF -DCMAKE_INSTALL_PREFIX=${DEPS_DIR}/local && make install
+  - wget ftp://ftp.simplesystems.org/pub/libpng/png/src/libpng16/libpng-1.6.34.tar.xz
+  - tar xf libpng-1.6.34.tar.xz
+  - cd libpng-1.6.34 && cmake -DPNG_SHARED=OFF -DPNG_TESTS=OFF -DCMAKE_INSTALL_PREFIX=${DEPS_DIR}/local && make install
+  - |
+    git clone --single-branch https://github.com/fmtlib/fmt.git --branch 4.1.0
+    cd fmt
+    cmake -DFMT_DOC=OFF -DFMT_TEST=OFF -DFMT_INSTALL=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=${DEPS_DIR}/local
+    make install
   - cd ${TRAVIS_BUILD_DIR}
 
 before_script:
